# tde-newt

./: CMakeLists.txt
encoding/: CMakeLists.txt
encoding/base64/: CMakeLists.txt
hw/: CMakeLists.txt
hw/bsp/: CMakeLists.txt
hw/bsp/nordic_pca10040/: nordic_pca10040_no_boot.ld
hw/cmsis-core/: CMakeLists.txt
hw/drivers/: CMakeLists.txt
hw/drivers/pwm/pwm_nrf52/src/: pwm_nrf52.c
hw/hal/: CMakeLists.txt
hw/hal/include/hal/: hal_system.h
hw/mcu/: CMakeLists.txt
hw/mcu/nordic/: CMakeLists.txt
hw/mcu/nordic/nrf52xxx/: CMakeLists.txt
hw/mcu/nordic/nrf52xxx/nrfx/mdk/: compiler_abstraction.h
hw/mcu/nordic/nrf52xxx/src/: hal_os_tick.c  hal_system.c  hal_system_start.c
kernel/: CMakeLists.txt
kernel/os/: CMakeLists.txt
kernel/os/include/os/: mynewt.h  os.h  os_arch.h
sys/: CMakeLists.txt
sys/fault/include/fault/: fault.h
time/: CMakeLists.txt
util/: CMakeLists.txt
