#-----------------------------------------------------------------------------
# Newt HW
#
# @file CMakeLists.txt
#-----------------------------------------------------------------------------

# define subprojects
find_subprojects (subprojects)

SET (NEWT_SOC nrf52)
SET (NEWT_BSP nordic_pca10040)

#-----------------------------------------------------------------------------
# Build configuration
#-----------------------------------------------------------------------------

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/drivers)

use_sdk_headers (core/hw/drivers/uart
                 core/hw/drivers/uart/uart_hal
                 core/hw/mcu/nordic/nrf52xxx/nrfx/drivers)

ADD_DEFINITIONS (-DBSP_NRF52=1)
ADD_DEFINITIONS (-DSOFT_PWM=0)
ADD_DEFINITIONS (-DENC_FLASH_DEV=0)
ADD_DEFINITIONS (-DUARTBB_0=0)
ADD_DEFINITIONS (-DRAM_RESIDENT=0)

ADD_DEFINITIONS (-DMCU_TARGET=nRF52832)
ADD_DEFINITIONS (-DUART_0_PIN_TX=6)
ADD_DEFINITIONS (-DUART_0_PIN_RX=8)
ADD_DEFINITIONS (-DUART_0_PIN_RTS=5)
ADD_DEFINITIONS (-DUART_0_PIN_CTS=7)
ADD_DEFINITIONS (-DSPI_0_MASTER_PIN_SCK=23)
ADD_DEFINITIONS (-DSPI_0_MASTER_PIN_MOSI=24)
ADD_DEFINITIONS (-DSPI_0_MASTER_PIN_MISO=25)
ADD_DEFINITIONS (-DSPI_0_SLAVE_PIN_SCK=23)
ADD_DEFINITIONS (-DSPI_0_SLAVE_PIN_MOSI=24)
ADD_DEFINITIONS (-DSPI_0_SLAVE_PIN_MISO=25)
ADD_DEFINITIONS (-DSPI_0_SLAVE_PIN_SS=22)
ADD_DEFINITIONS (-DI2C_0_PIN_SCL=27)
ADD_DEFINITIONS (-DI2C_0_PIN_SDA=26)
ADD_DEFINITIONS (-DCONFIG_FCB_FLASH_AREA=FLASH_AREA_NFFS)
ADD_DEFINITIONS (-DREBOOT_LOG_FLASH_AREA=FLASH_AREA_REBOOT_LOG)
ADD_DEFINITIONS (-DNFFS_FLASH_AREA=FLASH_AREA_NFFS)
ADD_DEFINITIONS (-DCOREDUMP_FLASH_AREA=FLASH_AREA_IMAGE_1)
ADD_DEFINITIONS (-DMCU_DCDC_ENABLED=1)
ADD_DEFINITIONS (-DMCU_LFCLK_SOURCE=LFXO)
ADD_DEFINITIONS (-DBOOT_SERIAL_DETECT_PIN=13)

ADD_DEFINITIONS (-DTIMER_0=0)
ADD_DEFINITIONS (-DTIMER_5=1)
ADD_DEFINITIONS (-DOS_CPUTIME_FREQ=32768)
ADD_DEFINITIONS (-DOS_CPUTIME_TIMER_NUM=5)
ADD_DEFINITIONS (-DBLE_XTAL_SETTLE_TIME=1500)

ADD_DEFINITIONS (-DMCU_TARGET=nRF52832)
ADD_DEFINITIONS (-DMCU_FLASH_MIN_WRITE_SIZE=1)
ADD_DEFINITIONS (-DMCU_DCDC_ENABLED=0)
ADD_DEFINITIONS (-DMCU_LFCLK_SOURCE=LFXO)
ADD_DEFINITIONS (-DMCU_I2C_RECOVERY_DELAY_USEC=100)
ADD_DEFINITIONS (-DMCU_BUS_DRIVER_I2C_USE_TWIM=0)
ADD_DEFINITIONS (-DMCU_GPIO_USE_PORT_EVENT=0)
ADD_DEFINITIONS (-DMCU_DEBUG_IGNORE_BKPT=0)

ADD_DEFINITIONS (-DI2C_0=0)
ADD_DEFINITIONS (-UI2C_0_PIN_SCL)
ADD_DEFINITIONS (-UI2C_0_PIN_SDA)
ADD_DEFINITIONS (-DI2C_0_FREQ_KHZ=100)
ADD_DEFINITIONS (-DI2C_1=0)
ADD_DEFINITIONS (-UI2C_1_PIN_SCL)
ADD_DEFINITIONS (-UI2C_1_PIN_SDA)
ADD_DEFINITIONS (-DI2C_1_FREQ_KHZ=100)

ADD_DEFINITIONS (-DSPI_0_MASTER=0)
ADD_DEFINITIONS (-USPI_0_MASTER_PIN_SCK)
ADD_DEFINITIONS (-USPI_0_MASTER_PIN_MOSI)
ADD_DEFINITIONS (-USPI_0_MASTER_PIN_MISO)

ADD_DEFINITIONS (-DSPI_0_SLAVE=0)
ADD_DEFINITIONS (-USPI_0_SLAVE_PIN_SCK)
ADD_DEFINITIONS (-USPI_0_SLAVE_PIN_MOSI)
ADD_DEFINITIONS (-USPI_0_SLAVE_PIN_MISO)
ADD_DEFINITIONS (-USPI_0_SLAVE_PIN_SS)

ADD_DEFINITIONS (-DSPI_1_MASTER=0)
ADD_DEFINITIONS (-USPI_1_MASTER_PIN_SCK)
ADD_DEFINITIONS (-USPI_1_MASTER_PIN_MOSI)
ADD_DEFINITIONS (-USPI_1_MASTER_PIN_MISO)
ADD_DEFINITIONS (-DSPI_1_SLAVE=0)
ADD_DEFINITIONS (-USPI_1_SLAVE_PIN_SCK)
ADD_DEFINITIONS (-USPI_1_SLAVE_PIN_MOSI)
ADD_DEFINITIONS (-USPI_1_SLAVE_PIN_MISO)
ADD_DEFINITIONS (-USPI_1_SLAVE_PIN_SS)

ADD_DEFINITIONS (-DSPI_2_MASTER=0)
ADD_DEFINITIONS (-USPI_2_MASTER_PIN_SCK)
ADD_DEFINITIONS (-USPI_2_MASTER_PIN_MOSI)
ADD_DEFINITIONS (-USPI_2_MASTER_PIN_MISO)

ADD_DEFINITIONS (-DSPI_2_SLAVE=0)
ADD_DEFINITIONS (-USPI_2_SLAVE_PIN_SCK)
ADD_DEFINITIONS (-USPI_2_SLAVE_PIN_MOSI)
ADD_DEFINITIONS (-USPI_2_SLAVE_PIN_MISO)
ADD_DEFINITIONS (-USPI_2_SLAVE_PIN_SS)

ADD_DEFINITIONS (-DSPI_3_MASTER=0)
ADD_DEFINITIONS (-USPI_3_MASTER_PIN_SCK)
ADD_DEFINITIONS (-USPI_3_MASTER_PIN_MOSI)
ADD_DEFINITIONS (-USPI_3_MASTER_PIN_MISO)

ADD_DEFINITIONS (-DSPI_3_SLAVE=0)
ADD_DEFINITIONS (-USPI_3_SLAVE_PIN_SCK)
ADD_DEFINITIONS (-USPI_3_SLAVE_PIN_MOSI)
ADD_DEFINITIONS (-USPI_3_SLAVE_PIN_MISO)
ADD_DEFINITIONS (-USPI_3_SLAVE_PIN_SS)

ADD_DEFINITIONS (-DADC_0=0)
ADD_DEFINITIONS (-DADC_0_REFMV_0=0)

ADD_DEFINITIONS (-DPWM_0=0)
ADD_DEFINITIONS (-DPWM_1=0)
ADD_DEFINITIONS (-DPWM_2=0)
ADD_DEFINITIONS (-DPWM_3=0)

ADD_DEFINITIONS (-DTRNG=0)

ADD_DEFINITIONS (-DCRYPTO=0)

ADD_DEFINITIONS (-DUART_0=1)
ADD_DEFINITIONS (-UUART_0_PIN_TX)
ADD_DEFINITIONS (-UUART_0_PIN_RX)
ADD_DEFINITIONS (-DUART_0_PIN_RTS=-1)
ADD_DEFINITIONS (-DUART_0_PIN_CTS=-1)

ADD_DEFINITIONS (-DUART_1=0)
ADD_DEFINITIONS (-UUART_1_PIN_TX)
ADD_DEFINITIONS (-UUART_1_PIN_RX)
ADD_DEFINITIONS (-DUART_1_PIN_RTS=-1)
ADD_DEFINITIONS (-DUART_1_PIN_CTS=-1)

ADD_DEFINITIONS (-DTIMER_0=1)
ADD_DEFINITIONS (-DTIMER_1=0)
ADD_DEFINITIONS (-DTIMER_2=0)
ADD_DEFINITIONS (-DTIMER_3=0)
ADD_DEFINITIONS (-DTIMER_4=0)
ADD_DEFINITIONS (-DTIMER_5=0)

ADD_DEFINITIONS (-DQSPI_ENABLE=0)
ADD_DEFINITIONS (-DQSPI_READOC=0)
ADD_DEFINITIONS (-DQSPI_WRITEOC=0)
ADD_DEFINITIONS (-DQSPI_ADDRMODE=0)
ADD_DEFINITIONS (-DQSPI_DPMCONFIG=0)
ADD_DEFINITIONS (-DQSPI_SCK_DELAY=0)
ADD_DEFINITIONS (-DQSPI_SCK_FREQ=0)
ADD_DEFINITIONS (-DQSPI_SPI_MODE=0)
ADD_DEFINITIONS (-DQSPI_FLASH_SECTOR_SIZE=0)
ADD_DEFINITIONS (-DQSPI_FLASH_PAGE_SIZE=0)
ADD_DEFINITIONS (-DQSPI_FLASH_SECTOR_COUNT=-1)
ADD_DEFINITIONS (-DQSPI_PIN_CS=-1)
ADD_DEFINITIONS (-DQSPI_PIN_SCK=-1)
ADD_DEFINITIONS (-DQSPI_PIN_DIO0=-1)
ADD_DEFINITIONS (-DQSPI_PIN_DIO1=-1)
ADD_DEFINITIONS (-DQSPI_PIN_DIO2=-1)
ADD_DEFINITIONS (-DQSPI_PIN_DIO3=-1)

ADD_DEFINITIONS (-DNFC_PINS_AS_GPIO=1)

ADD_DEFINITIONS (-DGPIO_AS_PIN_RESET=0)

ADD_DEFINITIONS (-DNRF52_PAN_28)

newt_no_warnings ()

# build all projects
FOREACH (project ${subprojects})
  ADD_SUBDIRECTORY (${project} ${project})
ENDFOREACH ()
